syntax = "proto3";

option go_package = "gitee.com/openeuler/kunpengsecl/attestation/demo/qca_demo/qapi";

service Qca {
    rpc GetReport (GetReportRequest) returns (GetReportReply) {}
}

message GetReportRequest {
    int64 uuid = 1;
    buffer usr_data = 2;
    buffer param_set = 3;
    buffer report = 4;
    bool with_tcb = 5;
}

message GetReportReply {
    buffer tee_report = 1;
    bytes nonce = 2;
}

message buffer {
    uint32 size = 1;
    bytes buf = 2;
}
